# Advent-2022

./: .gitignore  Advent-2022.cabal  README.md
app/: Main.hs
solutions/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day8.hs  Day9.hs
