cabal-version:      2.4
name:               Advent2022
version:            0.1.0.0
author:             ivy
maintainer:         ivy.v.bridges@gmail.com



executable Advent2022
    main-is: Main.hs
    
    other-modules:  Day1, Day2, Day3, Day4, Day5, Day6, Day8
    build-depends:  base
    hs-source-dirs: app, solutions
    
    default-language: Haskell2010

